<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            app:tint="@color/purple_500" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvWelcomeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_welcome_user"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditProfile"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/btn_edit_profile"
            android:textAllCaps="false" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:text="@string/title_email" />

                    <TextView
                        android:id="@+id/tvEmail"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:gravity="end"
                        tools:text="a@b.com" />
                </TableRow>

                <TableRow android:layout_marginTop="15dp">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:text="@string/title_phone" />

                    <TextView
                        android:id="@+id/tvPhone"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:gravity="end"
                        tools:text="0123456789" />
                </TableRow>

                <TableRow android:layout_marginTop="15dp">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:text="@string/title_address" />

                    <TextView
                        android:id="@+id/tvAddress"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:gravity="end"
                        tools:text="00/11 Main Road" />
                </TableRow>

                <TableRow android:layout_marginTop="15dp">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:text="@string/title_gender" />

                    <TextView
                        android:id="@+id/tvGender"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:gravity="end"
                        tools:text="Male" />
                </TableRow>

                <TableRow android:layout_marginTop="15dp">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:text="@string/title_age" />

                    <TextView
                        android:id="@+id/tvAge"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:gravity="end"
                        tools:text="100" />
                </TableRow>
            </TableLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/title_settings"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/purple_500" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:padding="20dp"
            android:id="@+id/btnLogout"
            android:text="@string/menu_logout"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/ic_baseline_logout_24"
            app:iconPadding="20dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

