<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.scanner.ScannerFragment">

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcodeScanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:zxing_scanner_layout="@layout/custom_barcode_scanner" />

    <LinearLayout
        android:id="@+id/welcomeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_welcome"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            app:fontFamily="@font/bad_script" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            tools:text="@string/app_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLaunchSurvey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginTop="20dp"
            android:text="@string/btn_go_to_survey"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>