<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            app:tint="@color/teal_700" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvWelcomeUser"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_welcome_user"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/title_survey_result"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/purple_500" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvQuestion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/survey_question_1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <RadioGroup
            android:id="@+id/rGroupQuestion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rBtnQuestion1Yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_yes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rBtnQuestion1No"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_no" />
        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvQuestion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/survey_question_2"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <RadioGroup
            android:id="@+id/rGroupQuestion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rBtnQuestion2Yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_yes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rBtnQuestion2No"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_no" />
        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvQuestion3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/survey_question_3"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <RadioGroup
            android:id="@+id/rGroupQuestion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rBtnQuestion3Yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_yes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rBtnQuestion3No"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_no" />
        </RadioGroup>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

